# esims-project

./: .coveragerc  .dockerignore  .gitignore  .pylintrc  dev-requirements.in  dev-requirements.txt  mypy.ini
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  labeler.yml
.github/workflows/: aws-ecr-publish.yml  aws-lambda-update.yml  check-bandit.yml  check-black.yml  check-coverage.yml  check-mypy.yml  check-pylint.yml  ci-deduplicate.yml  ci-esimsrouter.yml  ci-ingestesims.yml  ci-lib.yml  ci-refreshdropbox.yml  deploy-lambda.yml  labeler.yml  (+8 more)
deduplicate/: Dockerfile  constraints.txt  requirements.in  requirements.txt  setup.cfg  setup.py  test-requirements.txt
dropboxconnector/: Dockerfile  requirements.txt  setup.cfg  setup.py  test-requirements.txt
esimnumber/: Dockerfile  setup.cfg  setup.py
esimsrouter/: Dockerfile  constraints.txt  pyproject.toml  requirements.in  requirements.txt  setup.cfg  setup.py  test-requirements.in  test-requirements.txt
ingestesims/: Dockerfile  constraints.txt  requirements.in  requirements.txt  setup.cfg  setup.py  test-requirements.txt
layant-slack/: Dockerfile  README.md  app.js  layan-t-api.js  package.json
lib/: setup.cfg  setup.py  test-requirements.in  test-requirements.txt
lib/esimslib-connectors/: setup.cfg  setup.py
lib/esimslib-connectors/esimslib/connectors/: __init__.py
refreshdropbox/: Dockerfile  constraints.txt  requirements.in  requirements.txt  setup.cfg  setup.py  test-requirements.txt
restockesims/: Dockerfile  setup.cfg  setup.py
wecom-slack/: README.md  app.js  package.json  shrinkwrap.yaml
(+43 files in other folders)
