[metadata]
name = esimslib-connectors
author = Moaz Mansour
author_email = moaz@moneysavvy.io
description = Esims Connectors Library
long_description = file: README.md
url = https://github.com/moneysavvyio/esims-project/tree/main/lib/esimslib-connectors

[options]
packages = find_namespace:
python_requires = >= 3.8
setup_requires = setuptools
install_requires =
    boto3 == 1.28.25

[bdist_wheel]
universal = true